# api-demo

./: pyproject.toml
.github/workflows/: ci.yml
tests/: test_main.py
tests/integration/: test_api_integration.py
